# metal-os

./: Cargo.toml
.cargo/: config
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  mouse.rs  pit.rs  rtc.rs  time.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
