[package]
name = "metal-os"
version = "0.1.0"
authors = ["PetarDambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 10

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.8.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator = "0.6.4"